--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,34 @@
 @font-face {
 	font-family: "Gilroy-Regular";
-	src: url("./Gilroy/Gilroy-Regular.ttf") format("truetype");
+	src: url("./assets/Gilroy/Gilroy-Regular.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Gilroy-SemiBold";
-	src: url("./Gilroy/Gilroy-SemiBold.ttf") format("truetype");
+	src: url("./assets/Gilroy/Gilroy-SemiBold.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Gilroy-Bold";
-	src: url("./Gilroy/Gilroy-Bold.ttf") format("truetype");
+	src: url("./assets/Gilroy/Gilroy-Bold.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Gilroy-Black";
-	src: url("./Gilroy/Gilroy-Black.ttf") format("truetype");
+	src: url("./assets/Gilroy/Gilroy-Black.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Gilroy-Thin";
-	src: url("./Gilroy/Gilroy-UltraLight.ttf") format("truetype");
+	src: url("./assets/Gilroy/Gilroy-UltraLight.ttf") format("truetype");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -176,12 +176,11 @@ body .primary-btn {
 	border-radius: 4px;
 }
 
-body .content-container {
+body .app-page .content-container {
 	width: 100%;
 	max-width: 1400px;
 	margin: auto;
 	padding: 20px;
-	display: none;
 }
 
 body .content-container.active-page {
@@ -549,52 +548,6 @@ body
 	button {
 	padding: 20px 40px;
 	border-radius: 10px;
-}
-
-body
-	.status-container
-	.markets-inner-container
-	.global-stats-container {
-	margin-top: 50px;
-}
-
-body
-	.status-container
-	.markets-inner-container
-	.global-stats-container
-	.stats-container {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	width: 100%;
-	margin: auto;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	text-align: center;
-	gap: 10px;
-	margin-top: 30px;
-}
-
-body
-	.status-container
-	.markets-inner-container
-	.global-stats-container
-	.stats-container
-	p {
-	font-size: 16px;
-}
-
-body
-	.status-container
-	.markets-inner-container
-	.global-stats-container
-	.stats-container
-	.balance {
-	font-size: 25px;
-	margin-top: 10px;
-	font-weight: 900;
-	font-family: "Gilroy-SemiBold";
 }
 
 body
@@ -1123,6 +1076,7 @@ body
 	margin-top: 20px;
 	border-bottom: 3px solid transparent;
 	font-weight: 900;
+	border-radius: 0;
 }
 
 .popup-container
@@ -1262,14 +1216,13 @@ body
 	.popup-markets-container
 	.popup-options
 	.buttons-container
-	.repay-buttons,
+	.borrow-buttons,
 .popup-container
 	.popup-markets-container
 	.popup-options
 	.buttons-container
-	.risk-buttons {
-	display: -webkit-box;
-	display: -ms-flexbox;
+	.repay-buttons,
+.risk-buttons {
 	display: flex;
 	gap: 20px;
 }
@@ -1293,8 +1246,16 @@ body
 .popup-container .popup-markets-container .active {
 	display: block;
 }
-
-.popup-container .popup-markets-container .risk-popup .risk-circle {
+.risk-popup {
+	padding: 20px;
+}
+.risk-buttons {
+	width: 100%;
+}
+.risk-buttons button {
+	width: 100%;
+}
+.risk-popup .risk-circle {
 	-webkit-transform: rotate(-45deg);
 	transform: rotate(-45deg);
 	margin: auto;
@@ -1317,19 +1278,18 @@ body
 	font-size: 40px;
 	margin-top: 40px;
 }
-
-.popup-container .popup-markets-container .risk-popup .risk-circle p {
+.risk-popup .risk-circle p {
 	-webkit-transform: rotate(45deg);
 	transform: rotate(45deg);
 }
 
-.popup-container .popup-markets-container .risk-popup .risk-text {
+.risk-popup .risk-text {
 	margin: 40px 0;
 	font-weight: 100;
 	line-height: 20px;
 }
 
-.popup-container .popup-markets-container .risk-popup .risk-text a {
+.risk-popup .risk-text a {
 	font-family: "Gilroy-SemiBold", sans-serif;
 	font-weight: 100;
 }
