--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -146,23 +146,16 @@
 	h2 {
 	position: absolute;
 	inset: 0;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
 	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
 	justify-content: center;
 	font-weight: 100;
 	font-size: 30px;
 	font-family: "Gilroy-SemiBold", sans-serif;
 	z-index: 1;
-	width: -webkit-max-content;
-	width: -moz-max-content;
 	width: max-content;
 	margin: auto;
+	padding-left: 40px;
 }
 
 .popup-container
@@ -368,4 +361,13 @@
 	img {
 	height: 25px;
 	width: auto;
+}
+.dashboard-input {
+	border: none;
+	background-color: transparent;
+	outline: none;
+	font-size: 30px;
+	padding-left: 10px;
+	margin-top: -3px;
+	max-width: 100px;
 }
